--- a/SimpleNewsGideonApplication/DetailNews.storyboard
+++ b/SimpleNewsGideonApplication/DetailNews.storyboard
@@ -25,7 +25,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BBm-i8-AL8">
-                                <rect key="frame" x="16" y="99.5" width="382" height="21"/>
+                                <rect key="frame" x="16" y="99.5" width="36" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -42,19 +42,28 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u58-VD-af2">
+                                <rect key="frame" x="349" y="96.5" width="53" height="27"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <state key="normal" title="+Favorite"/>
+                                <connections>
+                                    <action selector="addToFavorite:" destination="488-up-lRX" eventType="touchUpInside" id="6zG-6k-Zfa"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="BBm-i8-AL8" firstAttribute="leading" secondItem="Q4o-sd-ULM" secondAttribute="leading" id="4mU-Tb-zOS"/>
                             <constraint firstItem="4e2-g3-wBE" firstAttribute="trailing" secondItem="Q4o-sd-ULM" secondAttribute="trailing" id="8u1-lh-dEx"/>
                             <constraint firstItem="FfA-zV-ef6" firstAttribute="top" secondItem="BBm-i8-AL8" secondAttribute="bottom" constant="15.5" id="ACu-os-hya"/>
+                            <constraint firstItem="u58-VD-af2" firstAttribute="centerY" secondItem="BBm-i8-AL8" secondAttribute="centerY" id="Bhv-9J-Nac"/>
                             <constraint firstItem="4e2-g3-wBE" firstAttribute="top" secondItem="FfA-zV-ef6" secondAttribute="bottom" constant="8" id="FKn-rd-Z0t"/>
                             <constraint firstItem="BBm-i8-AL8" firstAttribute="top" secondItem="Q4o-sd-ULM" secondAttribute="bottom" constant="12" id="Hiu-ia-AHj"/>
                             <constraint firstItem="4e2-g3-wBE" firstAttribute="leading" secondItem="Q4o-sd-ULM" secondAttribute="leading" id="If2-TY-nQZ"/>
                             <constraint firstItem="FfA-zV-ef6" firstAttribute="leading" secondItem="EH5-gs-vA1" secondAttribute="leading" id="MOG-k5-CFp"/>
                             <constraint firstItem="Q4o-sd-ULM" firstAttribute="leading" secondItem="EH5-gs-vA1" secondAttribute="leading" constant="16" id="Qqa-P9-5rV"/>
                             <constraint firstItem="EH5-gs-vA1" firstAttribute="trailing" secondItem="FfA-zV-ef6" secondAttribute="trailing" id="Xe3-RN-Psr"/>
-                            <constraint firstItem="BBm-i8-AL8" firstAttribute="trailing" secondItem="Q4o-sd-ULM" secondAttribute="trailing" id="Y62-74-Esd"/>
+                            <constraint firstItem="EH5-gs-vA1" firstAttribute="trailing" secondItem="u58-VD-af2" secondAttribute="trailing" constant="12" id="cfc-fH-d4V"/>
                             <constraint firstItem="Q4o-sd-ULM" firstAttribute="top" secondItem="EH5-gs-vA1" secondAttribute="top" constant="12" id="gky-cI-pXR"/>
                             <constraint firstItem="EH5-gs-vA1" firstAttribute="trailing" secondItem="Q4o-sd-ULM" secondAttribute="trailing" constant="16" id="jgQ-p9-ckv"/>
                         </constraints>
@@ -64,6 +73,7 @@
                     <connections>
                         <outlet property="dateLabel" destination="BBm-i8-AL8" id="dkz-Yn-if0"/>
                         <outlet property="detailView" destination="hWI-1U-4NV" id="H2g-pw-cjk"/>
+                        <outlet property="favoriteButton" destination="u58-VD-af2" id="Nbq-rG-TmE"/>
                         <outlet property="headlineLabel" destination="Q4o-sd-ULM" id="A6u-x3-Ss8"/>
                         <outlet property="newsImageView" destination="FfA-zV-ef6" id="thl-Xm-qPV"/>
                         <outlet property="snippetLabel" destination="4e2-g3-wBE" id="v8q-y0-r8D"/>
